# chrome-dino-gym

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  human_play.py  random_agent.py
src/chrome_dino_gym/: __init__.py  cli.py
src/chrome_dino_gym/core/: __init__.py  game_engine.py  game_objects.py  physics.py
src/chrome_dino_gym/envs/: __init__.py  dino_env.py
src/chrome_dino_gym/rendering/: __init__.py  pygame_renderer.py
src/chrome_dino_gym/utils/: __init__.py  helpers.py
tests/: conftest.py  test_integration.py
tests/test_core/: test_game_engine.py
tests/test_envs/: test_dino_env.py
tests/test_rendering/: test_pygame_renderer.py
