[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chrome-dino-gym"
version = "0.1.0"
description = "A Gymnasium environment for the Chrome Dino game"
authors = [
    {name = "Rafael Rodero", email = "rrodero@live.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["reinforcement-learning", "gymnasium", "chrome-dino", "game", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "gymnasium>=1.2.0",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
]

[project.optional-dependencies]
ml = [
    "matplotlib>=3.10.5",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
]
examples = [
    "matplotlib>=3.10.5",
    "stable-baselines3>=2.7.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]

[project.urls]
Homepage = "https://github.com/rrodero/chrome-dino-gym"
Documentation = "https://chrome-dino-gym.readthedocs.io/"
Repository = "https://github.com/rrodero/chrome-dino-gym"
Issues = "https://github.com/rrodero/chrome-dino-gym/issues"

[project.scripts]
dino-demo = "chrome_dino_gym.cli:demo"
dino-train = "chrome_dino_gym.cli:train"

[tool.hatch.build.targets.wheel]
packages = ["src/chrome_dino_gym"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pygame.*", "gymnasium.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true
